tests/NormalTests/paczka1/small_fuzzy/80657945.err
Error in line 8: A571 A571 31,4
Error in line 15: i44j3K A571 225,1
